Overflow for issue text

--- a/www/alexstyle.css
+++ b/www/alexstyle.css
@@ -789,6 +789,7 @@ div.issuegrid > div > div {
 	margin-bottom: 2px;
 	padding: 0px;
 	text-align: center;
+	overflow: hidden;
 }
 
 div.issuegrid > div > div img {
